[gd_scene load_steps=8 format=3 uid="uid://bs6erfg51clxd"]

[ext_resource type="Script" uid="uid://bo3nw252aolm8" path="res://Scripts/game_select.gd" id="1_x1je1"]
[ext_resource type="FontFile" uid="uid://bkwpyydsxxqbd" path="res://Textures/Font/PublicPixel.otf" id="2_am1i2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_awayb"]
bg_color = Color(1, 1, 1, 1)
shadow_size = 2
shadow_offset = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jww2h"]
bg_color = Color(0.52906674, 0.5290667, 0.5290667, 1)
shadow_size = 2
shadow_offset = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6gp1q"]
bg_color = Color(0.6872149, 0.68721503, 0.6872149, 1)
shadow_size = 2
shadow_offset = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sfhn2"]
bg_color = Color(0.52906674, 0.5290667, 0.5290667, 1)
shadow_size = 2
shadow_offset = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ujedj"]

[node name="GameSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x1je1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -130.0
offset_right = 130.0
offset_bottom = 104.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("2_am1i2")
theme_override_font_sizes/font_size = 16
text = "Game Select"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -53.0
offset_right = 98.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="PvP" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(125, 75)
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_am1i2")
theme_override_styles/normal = SubResource("StyleBoxFlat_awayb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jww2h")
theme_override_styles/hover = SubResource("StyleBoxFlat_6gp1q")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_sfhn2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ujedj")
text = "Player
vs
Player"

[node name="PvCPU" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(125, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_am1i2")
theme_override_styles/normal = SubResource("StyleBoxFlat_awayb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jww2h")
theme_override_styles/hover = SubResource("StyleBoxFlat_6gp1q")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_sfhn2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ujedj")
text = "Player
vs
CPU"

[node name="Back" type="Button" parent="."]
custom_minimum_size = Vector2(45, 25)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 70.0
offset_bottom = 30.0
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_am1i2")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_awayb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jww2h")
theme_override_styles/hover = SubResource("StyleBoxFlat_6gp1q")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_sfhn2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ujedj")
text = "â—€ Back"

[connection signal="pressed" from="HBoxContainer/PvP" to="." method="_on_pvp_pressed"]
[connection signal="pressed" from="HBoxContainer/PvCPU" to="." method="_on_cpu_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
